<resources>
    <string name="app_name">CoffeeOrder</string>
    <string name="action_settings">Settings</string>
    <string name="tab1_head">Quantity</string>
    <string name="tab4_name">Name:</string>
    <string name="tab4_address">Address:</string>
    <string name="tab3_head">Your ID</string>
    <string name="tab2_head">Toppings</string>
    <string name="tab4_head">Summary</string>
    <string name="next_button">next</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="birth">Birth:</string>
    <string name="quantity">Quantity:</string>
    <string name="order">Order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order_message">Your order is on the way to you!</string>
    <string name="tab_quantity">QUANTITY</string>
    <string name="tab_toppings">TOPPINGS</string>
    <string name="tab_summary">SUMMARY</string>
    <string name="tab_ordered_head">Your order is on the way</string>
    <string name="tab_ordered_text">Your order is now on the way and will be delivered as soon as possible!</string>
    <string name="tab_continue">Continue</string>
</resources>
