<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/coffee"
                app:border_color="#FFFFFF"
                app:border_width="3dp" />

            <TextView
                style="@style/HeadTextView"
                android:text="@string/tab2_head"
                android:id="@+id/header"
                android:layout_below="@id/profile_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:id="@+id/header_toppings"
                android:layout_centerInParent="true">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/topping_whippedcream"
                    android:text="@string/whipped_cream"
                    android:textSize="20sp"/>



                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/topping_chocolate"
                    android:text="@string/chocolate"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_tab2"
                android:text="@string/next_button"
                android:layout_below="@id/header_toppings"
                android:layout_marginTop="18dp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

</ScrollView>
