<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:src="@drawable/postman"
            app:border_color="#FFFFFF"
            app:border_width="3dp" />

        <TextView
            style="@style/HeadTextView"
            android:id="@+id/head"
            android:layout_gravity="center"
            android:text="@string/tab_ordered_head"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="50dp"
            android:paddingTop="25dp"
            android:textSize="18sp"
            android:paddingRight="50dp"
            android:text="@string/tab_ordered_text"/>

        <Button
            android:background="@drawable/button_style"
            android:layout_width="wrap_content"
            android:id="@+id/continue_button"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tab_continue"/>

    </LinearLayout>

</ScrollView>
